// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/card/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-card ant-card-bordered" style="width: 300px;">
    <div class="ant-card-head">
      <div class="ant-card-head-wrapper">
        <div class="ant-card-head-title">Default size card</div>
        <div class="ant-card-extra"><a href="#">more</a></div>
      </div>
    </div>
    <div class="ant-card-body">
      <p>card content</p>
      <p>card content</p>
      <p>card content</p>
    </div>
  </div> <br>
  <div class="ant-card ant-card-bordered ant-card-small" style="width: 300px;">
    <div class="ant-card-head">
      <div class="ant-card-head-wrapper">
        <div class="ant-card-head-title">Small size card</div>
        <div class="ant-card-extra"><a href="#">more</a></div>
      </div>
    </div>
    <div class="ant-card-body">
      <p>card content</p>
      <p>card content</p>
      <p>card content</p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/border-less.md correctly 1`] = `
<div style="background: rgb(236, 236, 236); padding: 30px;">
  <div class="ant-card" style="width: 300px;">
    <div class="ant-card-head">
      <div class="ant-card-head-wrapper">
        <div class="ant-card-head-title">Card title</div>
      </div>
    </div>
    <div class="ant-card-body">
      <p>Card content</p>
      <p>Card content</p>
      <p>Card content</p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/flexible-content.md correctly 1`] = `
<div class="ant-card ant-card-bordered ant-card-hoverable" style="width: 240px;">
  <div class="ant-card-cover"><img alt="example" src="https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png"></div>
  <div class="ant-card-body">
    <div class="ant-card-meta">
      <div class="ant-card-meta-detail">
        <div class="ant-card-meta-title">Europe Street beat</div>
        <div class="ant-card-meta-description">www.instagram.com</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/grid-card.md correctly 1`] = `
<div class="ant-card ant-card-bordered ant-card-contain-grid">
  <div class="ant-card-head">
    <div class="ant-card-head-wrapper">
      <div class="ant-card-head-title">Card Title</div>
    </div>
  </div>
  <div class="ant-card-body">
    <div class="ant-card-grid" style="width: 25%; text-align: 'center';">Content</div>
    <div class="ant-card-grid" style="width: 25%; text-align: 'center';">Content</div>
    <div class="ant-card-grid" style="width: 25%; text-align: 'center';">Content</div>
    <div class="ant-card-grid" style="width: 25%; text-align: 'center';">Content</div>
    <div class="ant-card-grid" style="width: 25%; text-align: 'center';">Content</div>
    <div class="ant-card-grid" style="width: 25%; text-align: 'center';">Content</div>
    <div class="ant-card-grid" style="width: 25%; text-align: 'center';">Content</div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/in-column.md correctly 1`] = `
<div style="background-color: rgb(236, 236, 236); padding: 20px;">
  <div class="ant-row" style="margin-left: -8px; margin-right: -8px;">
    <div class="ant-col-8" style="padding-left: 8px; padding-right: 8px;">
      <div class="ant-card">
        <div class="ant-card-head">
          <div class="ant-card-head-wrapper">
            <div class="ant-card-head-title">Card title</div>
          </div>
        </div>
        <div class="ant-card-body">
          <p>card content</p>
        </div>
      </div>
    </div>
    <div class="ant-col-8" style="padding-left: 8px; padding-right: 8px;">
      <div class="ant-card">
        <div class="ant-card-head">
          <div class="ant-card-head-wrapper">
            <div class="ant-card-head-title">Card title</div>
          </div>
        </div>
        <div class="ant-card-body">
          <p>card content</p>
        </div>
      </div>
    </div>
    <div class="ant-col-8" style="padding-left: 8px; padding-right: 8px;">
      <div class="ant-card">
        <div class="ant-card-head">
          <div class="ant-card-head-wrapper">
            <div class="ant-card-head-title">Card title</div>
          </div>
        </div>
        <div class="ant-card-body">
          <p>card content</p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/inner.md correctly 1`] = `
<div class="ant-card ant-card-bordered">
  <div class="ant-card-head">
    <div class="ant-card-head-wrapper">
      <div class="ant-card-head-title">Card title</div>
    </div>
  </div>
  <div class="ant-card-body">
    <p style="font-size: 14px; color: rgba(0, 0, 0, 0.85); margin-bottom: 16px; font-weight: 500;">
      Group title
    </p>
    <div class="ant-card ant-card-bordered">
      <div class="ant-card-head">
        <div class="ant-card-head-wrapper">
          <div class="ant-card-head-title">Inner card title</div>
          <div class="ant-card-extra"><a href="#">More</a></div>
        </div>
      </div>
      <div class="ant-card-body">
        Inner Card content
      </div>
    </div>
    <div class="ant-card ant-card-bordered" style="margin-top: 16px;">
      <div class="ant-card-head">
        <div class="ant-card-head-wrapper">
          <div class="ant-card-head-title">Inner card title</div>
          <div class="ant-card-extra"><a href="#">More</a></div>
        </div>
      </div>
      <div class="ant-card-body">
        Inner Card content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/loading.md correctly 1`] = `
<div>
  <div class="ant-card ant-card-loading ant-card-bordered">
    <div class="ant-card-head">
      <div class="ant-card-head-wrapper">
        <div class="ant-card-head-title">Card title</div>
      </div>
    </div>
    <div class="ant-card-body">
      <div class="ant-card-loading-content">
        <div class="ant-row" style="margin-left: -4px; margin-right: -4px;">
          <div class="ant-col-22" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
        </div>
        <div class="ant-row" style="margin-left: -4px; margin-right: -4px;">
          <div class="ant-col-8" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
          <div class="ant-col-15" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
        </div>
        <div class="ant-row" style="margin-left: -4px; margin-right: -4px;">
          <div class="ant-col-6" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
          <div class="ant-col-18" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
        </div>
        <div class="ant-row" style="margin-left: -4px; margin-right: -4px;">
          <div class="ant-col-13" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
          <div class="ant-col-9" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
        </div>
        <div class="ant-row" style="margin-left: -4px; margin-right: -4px;">
          <div class="ant-col-4" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
          <div class="ant-col-3" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
          <div class="ant-col-16" style="padding-left: 4px; padding-right: 4px;">
            <div class="ant-card-loading-block"></div>
          </div>
        </div>
      </div>
    </div>
  </div> <button type="button" class="ant-btn" style="margin-top: 16px;"><span>Toggle loading</span></button>
</div>
`;

exports[`renders ./components/card/demo/meta.md correctly 1`] = `
<div class="ant-card ant-card-bordered ant-card-hoverable" style="width: 300px;">
  <div class="ant-card-cover"><img alt="example" src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png"></div>
  <div class="ant-card-body">
    <div class="ant-card-meta">
      <div class="ant-card-meta-avatar"><span class="ant-avatar ant-avatar-circle ant-avatar-image"><img src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></span></div>
      <div class="ant-card-meta-detail">
        <div class="ant-card-meta-title">Card title</div>
        <div class="ant-card-meta-description">This is the description</div>
      </div>
    </div>
  </div>
  <ul class="ant-card-actions">
    <li style="width: 33.333333333333336%;"><span><i aria-label="icon: setting" class="anticon anticon-setting"><svg viewBox="64 64 896 896" data-icon="setting" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 0 0 9.3-35.2l-.9-2.6a443.74 443.74 0 0 0-79.7-137.9l-1.8-2.1a32.12 32.12 0 0 0-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 0 0-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 0 0-25.8 25.7l-15.8 85.4a351.86 351.86 0 0 0-99 57.4l-81.9-29.1a32 32 0 0 0-35.1 9.5l-1.8 2.1a446.02 446.02 0 0 0-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 0 0-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0 0 35.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0 0 25.8 25.7l2.7.5a449.4 449.4 0 0 0 159 0l2.7-.5a32.05 32.05 0 0 0 25.8-25.7l15.7-85a350 350 0 0 0 99.7-57.6l81.3 28.9a32 32 0 0 0 35.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 0 1-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 0 1-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 0 1 512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 0 1 400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 0 1 624 502c0 29.9-11.7 58-32.8 79.2z"></path></svg></i></span></li>
    <li style="width: 33.333333333333336%;"><span><i aria-label="icon: edit" class="anticon anticon-edit"><svg viewBox="64 64 896 896" data-icon="edit" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 0 0 0-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 0 0 9.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"></path></svg></i></span></li>
    <li style="width: 33.333333333333336%;"><span><i aria-label="icon: ellipsis" class="anticon anticon-ellipsis"><svg viewBox="64 64 896 896" data-icon="ellipsis" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M176 511a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"></path></svg></i></span></li>
  </ul>
</div>
`;

exports[`renders ./components/card/demo/simple.md correctly 1`] = `
<div class="ant-card ant-card-bordered" style="width: 300px;">
  <div class="ant-card-body">
    <p>Card content</p>
    <p>Card content</p>
    <p>Card content</p>
  </div>
</div>
`;

exports[`renders ./components/card/demo/tabs.md correctly 1`] = `
<div>
  <div class="ant-card ant-card-bordered ant-card-contain-tabs" style="width: 100%;">
    <div class="ant-card-head">
      <div class="ant-card-head-wrapper">
        <div class="ant-card-head-title">Card title</div>
        <div class="ant-card-extra"><a href="#">More</a></div>
      </div>
      <div class="ant-tabs ant-tabs-top ant-tabs-large ant-tabs-line ant-card-head-tabs">
        <div role="tablist" tabindex="0" class="ant-tabs-bar ant-tabs-top-bar ant-tabs-large-bar">
          <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"><i aria-label="icon: left" class="ant-tabs-tab-prev-icon-target anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path></svg></i></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"><i aria-label="icon: right" class="ant-tabs-tab-next-icon-target anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path></svg></i></span></span>
            <div class="ant-tabs-nav-wrap">
              <div class="ant-tabs-nav-scroll">
                <div class="ant-tabs-nav ant-tabs-nav-animated">
                  <div>
                    <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab"><span><i aria-label="icon: home" class="anticon anticon-home"><svg viewBox="64 64 896 896" data-icon="home" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"></path></svg></i>tab1 </span></div>
                    <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab">tab2</div>
                  </div>
                  <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated" style="display: block; transform: translate3d(0px,0,0); webkit-transform: translate3d(0px,0,0); width: 0px;"></div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
        <div class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content" style="margin-left: 0%;">
          <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">
            <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
            <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
          </div>
          <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
        </div>
        <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
      </div>
    </div>
    <div class="ant-card-body">
      content1
    </div>
  </div> <br><br>
  <div class="ant-card ant-card-bordered ant-card-contain-tabs" style="width: 100%;">
    <div class="ant-card-head">
      <div class="ant-card-head-wrapper"></div>
      <div class="ant-tabs ant-tabs-top ant-tabs-large ant-tabs-line ant-card-head-tabs">
        <div role="tablist" tabindex="0" class="ant-tabs-bar ant-tabs-top-bar ant-tabs-large-bar">
          <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"><i aria-label="icon: left" class="ant-tabs-tab-prev-icon-target anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path></svg></i></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"><i aria-label="icon: right" class="ant-tabs-tab-next-icon-target anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" focusable="false" class=""><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path></svg></i></span></span>
            <div class="ant-tabs-nav-wrap">
              <div class="ant-tabs-nav-scroll">
                <div class="ant-tabs-nav ant-tabs-nav-animated">
                  <div>
                    <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab">article</div>
                    <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab">app</div>
                    <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab">project</div>
                  </div>
                  <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated" style="display: block; transform: translate3d(0px,0,0); webkit-transform: translate3d(0px,0,0); width: 0px;"></div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
        <div class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content" style="margin-left: -100%;">
          <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
          <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">
            <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
            <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
          </div>
          <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
        </div>
        <div tabindex="0" role="presentation" style="width: 0px; height: 0px; overflow: hidden; position: absolute;"></div>
      </div>
    </div>
    <div class="ant-card-body">
      <p>app content</p>
    </div>
  </div>
</div>
`;
